fixed alignment issues in cart-item price

--- a/src/app/component/CartItem/CartItem.style.scss
+++ b/src/app/component/CartItem/CartItem.style.scss
@@ -145,7 +145,7 @@
             @include after-mobile {
                 width: 20rem;
                 position: absolute;
-                top: 20px;
+                top: 0;
                 bottom: 0;
                 margin: auto;
                 right: 0;
